--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,22 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^12.19.2",
+    "lucide-react": "^0.525.0",
     "next": "15.3.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-lottie-player": "^2.1.0",
+    "react-simple-typewriter": "^5.0.1",
+    "react-typewriter-effect": "^1.1.0"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4.1.11",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.3.4",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.11",
-    "tailwindcss-cli": "^0.1.2",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3",
     "typescript": "^5"
   }
 }
